--- a/index.html
+++ b/index.html
@@ -35,18 +35,31 @@
             <p>En Jurídicos ODDA, nuestra misión es proporcionar asesoramiento y representación legal de la más alta calidad. Nos dedicamos a entender a fondo las necesidades de nuestros clientes para ofecer estrategias personalizadas y efectivas.</p>
             <p>Con años de experiencia en diversas áreas del derecho, nuestro equipo está comprometido con la justicia y la defensa de sus intereses.</p>
             <p>Creemos en una comunicación transparente y en construir relaciones de confianza duraderas</p>
+            <p>Actualmente el 70% de nuestros clientes nuevos, vienen de una recomendación de otro cliente.
+            Lo anterior atiende al hecho de que siempre damos atención, confianza, seguimiento y buenos resultados, a nuestros representados.</p>
             <div class="areas">
-              <div class="litigios area">
-                <img class="areas-icono" src="assets/litigios.png" alt="icono litigios">
-                <p>Litigios</p>
+              <div class="penal area">
+                <img class="areas-icono" src="assets/penal.webp" alt="icono litigios">
+                <p>Derecho Penal</p>
               </div>
-              <div class="corporativo area">
-                <img class="areas-icono" src="assets/corporativo.png" alt="icono corporativo">
-                <p>Derecho Corporativo</p>
+              <div class="mercantil area">
+                <img class="areas-icono" src="assets/mercantil.webp" alt="icono corporativo">
+                <p>Derecho mercantil</p>
               </div>
               <div class="familiar area">
-                <img class="areas-icono" src="assets/familiar.png" alt="icono familiar">
+                <img class="areas-icono" src="assets/familiar.webp" alt="icono familiar">
                 <p>Derecho Familiar</p>
+              </div>
+              <div class="civil area">
+                <img class="areas-icono" src="assets/civil.webp" alt="icono familiar">
+                <p>Derecho Civil</p>
+              </div>
+              <div class="laboral area">
+                <img class="areas-icono" src="assets/laboral.webp" alt="icono familiar">
+                <p>Derecho Laboral</p>
+              </div>
+              <div class="logo-area area">
+                <img class="areas-icono" src="assets/logo.webp" alt="icono familiar">
               </div>
             </div>
           </div>
@@ -57,39 +70,36 @@
       <h2>Casos de Éxito</h2>
       <article class="exito-content">
         <div class="caso-1 caso">
-          <h3>caso 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta accusamus aliquid aut saepe? Dolor quibusdam assumenda temporibus doloribus excepturi odio! Consectetur delectus magnam nobis nisi quod tempora cum soluta quaerat.</p>
-          <p class="resolucion">resolución: Lorem ipsum dolor sit.</p>
+          <p>Otro inmueble recuperado, después de que los clientes fueran decepcionados por dos abogados y después de no pagar renta por más de 6 años!!</p> 
+          <img class="caso-img" src="assets/caso1.webp" alt="imagen caso uno">
+          <p class="resolucion">#juridicoodda gracias por la confianza</p>
         </div>
         <div class="caso-2 caso">
-          <h3>caso 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta accusamus aliquid aut saepe? Dolor quibusdam assumenda temporibus doloribus excepturi odio! Consectetur delectus magnam nobis nisi quod tempora cum soluta quaerat.</p>
-          <p class="resolucion">resolución: Lorem ipsum dolor sit.</p>
+          <div class="caso-2-text">
+            <div>
+              <p>Libertad a nuestro representado, gracias por la confianza</p> 
+              <p>"narcomenudeo en su modalidad de distribución"!</p>
+            </div>
+            <p class="resolucion">#juridicoodda</p>
+          </div>
+          <img class="caso-img" src="assets/caso2.webp" alt="imagen caso dos">
         </div>
         <div class="caso-3 caso">
-          <h3>caso 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta accusamus aliquid aut saepe? Dolor quibusdam assumenda temporibus doloribus excepturi odio! Consectetur delectus magnam nobis nisi quod tempora cum soluta quaerat.</p>
-          <p class="resolucion">resolución: Lorem ipsum dolor sit.</p>
+          <p>Sentencia del amparo a favor de nuestra representada.</p>
+          <img class="caso-img" src="assets/caso3.webp" alt="imagen caso tres">
+          <p class="resolucion">Gracias por la confianza #juridicoodda</p>
         </div>
+        
         <div class="caso-4 caso">
-          <h3>caso 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta accusamus aliquid aut saepe? Dolor quibusdam assumenda temporibus doloribus excepturi odio! Consectetur delectus magnam nobis nisi quod tempora cum soluta quaerat.</p>
-          <p class="resolucion">resolución: Lorem ipsum dolor sit.</p>
-        </div>
-        <div class="caso-5 caso">
-          <h3>caso 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta accusamus aliquid aut saepe? Dolor quibusdam assumenda temporibus doloribus excepturi odio! Consectetur delectus magnam nobis nisi quod tempora cum soluta quaerat.</p>
-          <p class="resolucion">resolución: Lorem ipsum dolor sit.</p>
-        </div>
-        <div class="caso-6 caso">
-          <h3>caso 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta accusamus aliquid aut saepe? Dolor quibusdam assumenda temporibus doloribus excepturi odio! Consectetur delectus magnam nobis nisi quod tempora cum soluta quaerat.</p>
-          <p class="resolucion">resolución: Lorem ipsum dolor sit.</p>
+          <p>En Hidalgo nos dan la razón y en apelación ordenan dejar sin efectos una sentencia!!!</p>
+          <img class="caso-img" src="assets/caso4.webp" alt="imagen caso cuatro">
+          <p class="resolucion">Gracias por la confianza. #juridicoodda</p>
         </div>
       </article>
     </section>
     <section class="contacto" id="contacto">
       <h2>Contacto</h2>
+      <p class="contacto-text">En el despacho contamos con diversos especialistas, no importa cual sea la materia o el asunto, nuestro equipo legal siempre actualizado y en constante preparación, esta listo y a la orden para apoyarlo.</p>
       <form class="formulario" action="">
         <label for="nombre">Nombre</label>
           <input type="text" name="nombre" id="nombre">
